src/objects/Timesheet__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Required</fullName>
                    <default>true</default>
                    <label>Not Required</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Criticality1__c</fullName>
        <label>Criticality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Criticality2__c</fullName>
        <label>Criticality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Criticality3__c</fullName>
        <label>Criticality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date1__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date2__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date3__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description1__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description2__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description3__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Duration_hrs1__c</fullName>
        <formula>(IF(MINUTE(TIMEVALUE(End_Time1__c))=0&amp;&amp;MINUTE(TIMEVALUE(Start_Time1__c))&lt;&gt;0,HOUR(TIMEVALUE(End_Time1__c))-(HOUR(TIMEVALUE(Start_Time1__c))+1),HOUR(TIMEVALUE( End_Time1__c ))-HOUR(TIMEVALUE( Start_Time1__c ))))+(IF(MINUTE(TIMEVALUE(End_Time1__c))=0&amp;&amp;MINUTE(TIMEVALUE(Start_Time1__c))&lt;&gt;0,60-MINUTE(TIMEVALUE( Start_Time1__c )), (MINUTE(TIMEVALUE( End_Time1__c ))-MINUTE(TIMEVALUE( Start_Time1__c ))))/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration(hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_hrs2__c</fullName>
        <formula>(IF(MINUTE(TIMEVALUE(End_Time2__c))=0&amp;&amp;MINUTE(TIMEVALUE(Start_Time2__c))&lt;&gt;0,HOUR(TIMEVALUE(End_Time2__c))-(HOUR(TIMEVALUE(Start_Time2__c))+1),HOUR(TIMEVALUE( End_Time2__c ))-HOUR(TIMEVALUE( Start_Time2__c ))))+(IF(MINUTE(TIMEVALUE(End_Time2__c))=0&amp;&amp;MINUTE(TIMEVALUE(Start_Time2__c))&lt;&gt;0,60-MINUTE(TIMEVALUE( Start_Time2__c )), (MINUTE(TIMEVALUE( End_Time2__c ))-MINUTE(TIMEVALUE( Start_Time2__c ))))/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration(hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_hrs3__c</fullName>
        <formula>(IF(MINUTE(TIMEVALUE(End_Time3__c))=0&amp;&amp;MINUTE(TIMEVALUE(Start_Time3__c))&lt;&gt;0,HOUR(TIMEVALUE(End_Time3__c))-(HOUR(TIMEVALUE(Start_Time3__c))+1),HOUR(TIMEVALUE( End_Time3__c ))-HOUR(TIMEVALUE( Start_Time3__c ))))+(IF(MINUTE(TIMEVALUE(End_Time3__c))=0&amp;&amp;MINUTE(TIMEVALUE(Start_Time3__c))&lt;&gt;0,60-MINUTE(TIMEVALUE( Start_Time3__c )), (MINUTE(TIMEVALUE( End_Time3__c ))-MINUTE(TIMEVALUE( Start_Time3__c ))))/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration(hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Time1__c</fullName>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>End_Time2__c</fullName>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>End_Time3__c</fullName>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Start_Time1__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Start_Time2__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Start_Time3__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Task1__c</fullName>
        <label>Task</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task2__c</fullName>
        <label>Task</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task3__c</fullName>
        <label>Task</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week_End__c</fullName>
        <formula>Date1__c+4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week End(Friday)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Week_Start__c</fullName>
        <formula>Date1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week Start(Monday)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a__c</fullName>
        <formula>MFLOOR(Duration_hrs1__c)+MFLOOR(Duration_hrs2__c)+MFLOOR(Duration_hrs3__c)+MFLOOR(Duration_hrs4__c)+MFLOOR(Duration_hrs5__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>a</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>b__c</fullName>
        <formula>(Duration_hrs1__c+Duration_hrs2__c+Duration_hrs3__c+Duration_hrs4__c+Duration_hrs5__c)*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>b</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c__c</fullName>
        <formula>(MOD(MOD(((Duration_hrs1__c+Duration_hrs2__c+Duration_hrs3__c+Duration_hrs4__c+Duration_hrs5__c)*100),100),60))/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dur__c</fullName>
        <label>Total Hours(Weekly)</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Timesheet</label>
    <nameField>
        <displayFormat>TSD-{0000}</displayFormat>
        <label>Timesheet ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Rule1</fullName>
        <active>true</active>
        <errorConditionFormula>(WEEKDAY(Date1__c) &lt;&gt; 2)</errorConditionFormula>
        <errorMessage>Day Should be Monday</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule10</fullName>
        <active>true</active>
        <errorConditionFormula>((TODAY()&lt;Date5__c)||(Date5__c&lt;(TODAY()-12)))</errorConditionFormula>
        <errorMessage>(Error in Friday)
Can't go back before of previous week OR can't go to Tomorrow</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule11</fullName>
        <active>true</active>
        <errorConditionFormula>End_Time1__c  &lt;  Start_Time1__c</errorConditionFormula>
        <errorMessage>End time should greater than Start time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule2</fullName>
        <active>true</active>
        <errorConditionFormula>((TODAY()&lt;Date1__c)||(Date1__c&lt;(TODAY()-12)))</errorConditionFormula>
        <errorMessage>(Error in Monday)
Can't go back before of previous week OR can't go to Tomorrow</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule21</fullName>
        <active>true</active>
        <errorConditionFormula>End_Time2__c  &lt;  Start_Time2__c</errorConditionFormula>
        <errorMessage>End time should greater than Start time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule3</fullName>
        <active>true</active>
        <errorConditionFormula>(WEEKDAY(Date2__c) &lt;&gt; 3)</errorConditionFormula>
        <errorMessage>Day Should be Tuesday</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule31</fullName>
        <active>true</active>
        <errorConditionFormula>End_Time3__c  &lt;  Start_Time3__c</errorConditionFormula>
        <errorMessage>End time should greater than Start time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule4</fullName>
        <active>true</active>
        <errorConditionFormula>((TODAY()&lt;Date2__c)||(Date2__c&lt;(TODAY()-12)))</errorConditionFormula>
        <errorMessage>(Error in Tuesday)
Can't go back before of previous week OR can't go to Tomorrow</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule41</fullName>
        <active>true</active>
        <errorConditionFormula>End_Time4__c  &lt;  Start_Time4__c</errorConditionFormula>
        <errorMessage>End time should greater than Start time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule5</fullName>
        <active>true</active>
        <errorConditionFormula>(WEEKDAY(Date3__c) &lt;&gt; 4)</errorConditionFormula>
        <errorMessage>Day Should be Wednesday</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule51</fullName>
        <active>true</active>
        <errorConditionFormula>End_Time5__c  &lt;  Start_Time5__c</errorConditionFormula>
        <errorMessage>End time should greater than Start time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule6</fullName>
        <active>true</active>
        <errorConditionFormula>((TODAY()&lt;Date3__c)||(Date3__c&lt;(TODAY()-12)))</errorConditionFormula>
        <errorMessage>(Error in Wednesday)
Can't go back before of previous week OR can't go to Tomorrow</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule7</fullName>
        <active>true</active>
        <errorConditionFormula>(WEEKDAY(Date4__c) &lt;&gt; 5)</errorConditionFormula>
        <errorMessage>Day Should be Monday Thursday</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule8</fullName>
        <active>true</active>
        <errorConditionFormula>((TODAY()&lt;Date4__c)||(Date4__c&lt;(TODAY()-12)))</errorConditionFormula>
        <errorMessage>(Error in Thursday)
Can't go back before of previous week OR can't go to Tomorrow</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule9</fullName>
        <active>true</active>
        <errorConditionFormula>(WEEKDAY(Date5__c) &lt;&gt; 6)</errorConditionFormula>
        <errorMessage>Day Should be Friday</errorMessage>
    </validationRules>
</CustomObject>